# pkt

./: .clang-format  .clang-tidy  .clangd  .clangd.bak  .gitignore  CMakeLists.txt  Makefile  Taskfile.yml  flake.nix  meson.build  taskfile.yml
examples/: axpy_example.cu  train_linear.cu
include/: block_runtime.cuh  config.cuh  dependency.cuh  dispatch.cuh  kernel.cuh  op_traits.cuh  perf_counters.cuh  pipeline.cuh  profile_ranges.cuh  queue.cuh  runtime.hpp  segment.cuh  task.cuh  tile.cuh
include/ops/: axpy.cuh  linear_bwd.cuh  linear_fwd.cuh  mse.cuh  sgd.cuh  zero.cuh
scripts/: benchmark_linear.py  generate-clangd.sh
src/: cute_mlp.cu  cute_wmma.cu  log.hpp  mlp.cu  mlp_cpu.cpp  mlp_cute_megakernel.cu  mlp_train_megakernel.cu  phasebits.hpp  phasebits_demo.cpp  phasebits_demo_threaded.cpp  test_simple_cute_gemm2.cu  vadd.cu
tests/: test_axpy.cu  test_paging.cu  test_pipeline.cu  test_runtime.cu  test_task.cu  test_utils.cuh
warmups/: common.hpp  day1.cu  day2.cu  day3.cu
